src/objects/Retail_Quote_History__c.object
<CustomObject>
    <description>Custom Quote History Object for Retail</description>
    <fields>
        <fullName>Aggregate_PLC__c</fullName>
        <label>Aggregate PLC</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Basis__c</fullName>
        <label>Basis</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker_Fee_Allocation__c</fullName>
        <label>Broker Fee Allocation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$/Mwh</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Lump Sum</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Fee__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Broker Fee</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UCBNONPOR</fullName>
                </value>
                <value>
                    <fullName>IEC</fullName>
                </value>
                <value>
                    <fullName>TIER_1_2</fullName>
                </value>
                <value>
                    <fullName>TIER_A</fullName>
                </value>
                <value>
                    <fullName>UCBPOR</fullName>
                </value>
                <value>
                    <fullName>UCBPOR_BR</fullName>
                </value>
                <value>
                    <fullName>WESA</fullName>
                </value>
                <value>
                    <fullName>GFEC</fullName>
                </value>
                <value>
                    <fullName>Small Stable Contract - Evergreen</fullName>
                </value>
                <value>
                    <fullName>Small Stable Contract - MTM Renewal</fullName>
                </value>
                <value>
                    <fullName>Large Stable Contract</fullName>
                </value>
                <value>
                    <fullName>Large Stable PT-C Contract</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>Block and Index</fullName>
                </value>
                <value>
                    <fullName>Non Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Ancillary_Services__c</fullName>
        <label>Contract Ancillary Services</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Broker_Fee__c</fullName>
        <label>Contract Broker Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Capacity__c</fullName>
        <label>Contract Capacity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Energy_Off_PK__c</fullName>
        <label>Contract Energy Off PK</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Energy_On_PK__c</fullName>
        <label>Contract Energy On PK</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Energy__c</fullName>
        <label>Contract % Energy</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Index_Margin__c</fullName>
        <label>Contract Index Margin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Index_adder__c</fullName>
        <label>Contract Index adder</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Margin__c</fullName>
        <label>Contract Margin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Marketing_Cost__c</fullName>
        <label>Contract Marketing Cost</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Municipality_Fee__c</fullName>
        <label>Contract Municipality Fee</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Off_PK_Block_Size__c</fullName>
        <label>Contract Off PK Block Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_On_PK_Block_Size__c</fullName>
        <label>Contract On PK Block Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_RPS__c</fullName>
        <label>Contract RPS</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Transmission__c</fullName>
        <label>Contract Transmission</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Utility_Loss__c</fullName>
        <label>Contract Utility Loss</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Vol_Rec_Product__c</fullName>
        <label>Contract Vol Rec Product</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Vol_Rec__c</fullName>
        <label>Contract % Vol Rec</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Voluntary_Rec__c</fullName>
        <label>Contract Voluntary Rec</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Required__c</fullName>
        <formula>OR(X60_Day_Max_Exposure__c &gt;= 375000, Aggregate_PLC__c &gt;= 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Check Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Utility_Link__c</fullName>
        <label>Data Utility Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Default_Broker_Fee__c</fullName>
        <label>Default Broker Fee</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Index_Margin__c</fullName>
        <label>Default Index Margin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Margin__c</fullName>
        <label>Default Margin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Risk__c</fullName>
        <label>Default Risk</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Term__c</fullName>
        <formula>DATE(
    YEAR(Start_Term__c) +
    FLOOR((Term__c + MONTH(Start_Term__c)) / 12) -
    IF (MOD(MONTH(Start_Term__c) + Term__c, 12) = 0,
        1,
        0),

    MOD((Term__c + MONTH(Start_Term__c) - 1), 12) + 1,

    DAY(Start_Term__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Term</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Fixed__c</fullName>
        <label>% Energy Fixed</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Energy__c</fullName>
        <label>Energy</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holding_Cost__c</fullName>
        <label>Holding Cost</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holding_Days__c</fullName>
        <label>Holding Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISO_ARR__c</fullName>
        <label>ISO-ARR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Admin__c</fullName>
        <label>ISO-Admin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Ancillaries__c</fullName>
        <label>ISO-Ancillaries</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Cost_Recovery__c</fullName>
        <label>ISO-Cost Recovery</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_FTR__c</fullName>
        <label>ISO-FTR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Inadvertant__c</fullName>
        <label>ISO-Inadvertant</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Losses__c</fullName>
        <label>ISO-Losses</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_NITS__c</fullName>
        <label>ISO-NITS</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Op_Reserve_RSG__c</fullName>
        <label>ISO-Op Reserve-RSG</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_Other_Trans__c</fullName>
        <label>ISO-Other Trans</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISO_SSR_RMR__c</fullName>
        <label>ISO-SSR-RMR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Index_Margin_Allocation__c</fullName>
        <label>Index Margin Allocation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$/Mwh</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Lump Sum</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Index_Margin__c</fullName>
        <label>Index Margin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_Allocation__c</fullName>
        <label>Margin Allocation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$/Mwh</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Lump Sum</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Cost_Allocation__c</fullName>
        <label>Marketing Cost Allocation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$/Mwh</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Lump Sum</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Marketing Cost</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Municipality_Fee_Allocation__c</fullName>
        <label>Municipality Fee Allocation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$/Mwh</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Lump Sum</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Municipality_Fee__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Municipality Fee</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notional_Value__c</fullName>
        <label>Notional Value</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Off_Peak_Block_Size__c</fullName>
        <label>Off Peak Block Size</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Peak_Block_Size__c</fullName>
        <label>On Peak Block Size</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Dynagy_Quote_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Complete_Date_Time__c</fullName>
        <label>Price Complete Date-Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pricing_Analyst__c</fullName>
        <label>Pricing Analyst</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Method__c</fullName>
        <label>Pricing Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Notes__c</fullName>
        <label>Pricing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Valid_Date_Time__c</fullName>
        <label>Pricing Valid Date-Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Dynegy_Quote_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <description>Original Quote Number</description>
        <label>Quote Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Price_KWH__c</fullName>
        <label>Quote Price KWH</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Price__c</fullName>
        <label>Quote Price</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS__c</fullName>
        <label>RPS</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Waiting on Load Data</fullName>
                </value>
                <value>
                    <fullName>Manual Pricing in Process</fullName>
                </value>
                <value>
                    <fullName>Request Rejected</fullName>
                </value>
                <value>
                    <fullName>Pricing Complete</fullName>
                </value>
                <value>
                    <fullName>Error-Invalid Account</fullName>
                </value>
                <value>
                    <fullName>Error Utility Web-Service Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Error - Price Curve Invalid</fullName>
                </value>
                <value>
                    <fullName>Error - Invalid Term Selected</fullName>
                </value>
                <value>
                    <fullName>Contract Signed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shaping__c</fullName>
        <inlineHelpText>$/MWH</inlineHelpText>
        <label>Shaping</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Term__c</fullName>
        <label>Start Term</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Swing__c</fullName>
        <inlineHelpText>$/MWH</inlineHelpText>
        <label>Swing</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>Term in Months</description>
        <label>Term</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Level__c</fullName>
        <label>Tier Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCB_POR__c</fullName>
        <label>UCB-POR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utility_Loss__c</fullName>
        <label>Utility Loss</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vol_Rec_Product__c</fullName>
        <label>Vol Rec Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vol_Rec__c</fullName>
        <label>Vol Rec</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Voluntary_REC_Generator_Type__c</fullName>
        <label>Voluntary REC/Generator Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National Green - E Wind</fullName>
                </value>
                <value>
                    <fullName>Green-E - No Preference</fullName>
                </value>
                <value>
                    <fullName>Green-E - Wind</fullName>
                </value>
                <value>
                    <fullName>State Qualified - No Preference</fullName>
                </value>
                <value>
                    <fullName>State Qualified - Wind</fullName>
                </value>
                <value>
                    <fullName>Traditional - State Qualified</fullName>
                </value>
                <value>
                    <fullName>Traditional - Wind</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Voluntary_REC_Geographic_Location__c</fullName>
        <label>Voluntary REC Geographic Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Illinois - Preferred</fullName>
                </value>
                <value>
                    <fullName>Ohio - Preferred</fullName>
                </value>
                <value>
                    <fullName>Pennsylvania - Preferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Voluntary_REC__c</fullName>
        <label>Voluntary REC %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X60_Day_Max_Exposure__c</fullName>
        <label>60 Day Max Exposure</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <label>Retail Quote History</label>
    <nameField>
        <displayFormat>QH-{0000000}</displayFormat>
        <label>Retail Quote History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Quotes History</pluralLabel>
    <recordTypes>
        <fullName>Executable</fullName>
        <active>true</active>
        <label>Executable</label>
    </recordTypes>
    <recordTypes>
        <fullName>Indicative</fullName>
        <active>true</active>
        <label>Indicative</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>